# cppProjectTemplate

./: .gitignore  CMakeLists.txt  README.md
scripts/: commands.ps1  commands.psd1  commands.psm1  init.ps1
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  Sum.cpp
src/lib/public/: Sum.h
src/pch/: CMakeLists.txt  pch.cpp
src/pch/inc/: pch.h
